web commit by http://ethan.betacantrips.com/: won't someone think of the children?

--- a/doc/roadmap/discussion.mdwn
+++ b/doc/roadmap/discussion.mdwn
@@ -6,3 +6,7 @@ Yes, I'm looking at making this kind of change at 2.0, added to the list.
 However, I have doubts that it makes good sense to go relative by default.
 While it's not consitent with links, it seems to work better overall to
 have pagespecs be absolute by default, IMHO. --[[Joey]]
+
+I think after you work with ikiwiki for a while, it "makes more sense" for 
+them to be absolute, but I definitely remember tripping over absolute
+pagespecs a few times when I was just starting out. --Ethan
