web commit by JoshTriplett: Fix signature.

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -35,7 +35,7 @@ easily, perl is possible (but I'm not strong in perl).
 >
 > We will post the scripts as soon as we have them complete enough to convert our wikis.
 >
-> -- Josh Triplett
+> -- [[JoshTriplett]]
 
 >> Thanks for an excellent Xmas present, I will appreciate the additional 
 >> users this will help switch to ikiwiki! --[[Joey]]
