web commit by JoshTriplett: mention httpauth plugin.

--- a/doc/plugins/passwordauth.mdwn
+++ b/doc/plugins/passwordauth.mdwn
@@ -6,4 +6,4 @@ into the wiki. It also handles registering users, mailing passwords, and
 changing passwords in the prefs page.
 
 It is enabled by default, but can be turned off if you want to only use
-some other form of authentication, such as [[openid]].
+some other form of authentication, such as [[httpauth]] or [[openid]].
