web commit by JoshTriplett: Fix typo.  Link to the MetaWeblog protocol.  Sign.

--- a/doc/todo/Support_XML-RPC-based_blogging.mdwn
+++ b/doc/todo/Support_XML-RPC-based_blogging.mdwn
@@ -1,7 +1,8 @@
-Perhaps ikiwiki should support XML-RPC-baed blogging, using the standard
-MetaWeblog protocol.  This would allow the use of applets like gnome-blog
-to post to an ikiwiki blog.  The protocol supports multiple blog names, so
-one standard URL with page names as blog names would work.
+Perhaps ikiwiki should support XML-RPC-based blogging, using the [standard
+MetaWeblog protocol](http://www.xmlrpc.com/metaWeblogApi).  This would allow
+the use of applets like [[debpkg gnome-blog]] to post to an ikiwiki blog.  The
+protocol supports multiple blog names, so one standard URL with page names as
+blog names would work. --[[JoshTriplett]]
 
 > This would be a great thing to add a plugin for. (Probably using the cgi
 > hook to let ikiwiki act as an RPC server. --[[Joey]]
