web commit by JoshTriplett: I don't think MultiMarkdown solves [the BibTeX request|todo/BibTeX], but it might solve the request for LaTeX output.

--- a/doc/todo/Support__47__Switch_to_MultiMarkdon.mdwn
+++ b/doc/todo/Support__47__Switch_to_MultiMarkdon.mdwn
@@ -24,3 +24,5 @@ Supporting or switching to MultiMarkdown would take care of a few of the outstan
 MultiMarkdown would solve the BibTex request and the multiple output formats would make the print_link request an easy fix. MultiMarkdown is actively developed and can be found at:
 
 [MultiMarkdown Homepage](http://fletcher.freeshell.org/wiki/MultiMarkdown)
+
+> I don't think MultiMarkdown solves [the BibTeX request|todo/BibTeX], but it might solve the request for LaTeX output. --[[JoshTriplett]]
