web commit by JoshTriplett: typo

--- a/doc/todo/Support__47__Switch_to_MultiMarkdon.mdwn
+++ b/doc/todo/Support__47__Switch_to_MultiMarkdon.mdwn
@@ -25,4 +25,4 @@ MultiMarkdown would solve the BibTex request and the multiple output formats wou
 
 [MultiMarkdown Homepage](http://fletcher.freeshell.org/wiki/MultiMarkdown)
 
-> I don't think MultiMarkdown solves [the BibTeX request|todo/BibTeX], but it might solve the request for LaTeX output. --[[JoshTriplett]]
+> I don't think MultiMarkdown solves [[the BibTeX request|todo/BibTeX]], but it might solve the request for LaTeX output. --[[JoshTriplett]]
