--- a/doc/blog.mdwn
+++ b/doc/blog.mdwn
@@ -1,4 +1,8 @@
 [[if test="enabled(inline)"
+     then="This wiki has the inline plugin **enabled**."
+     else="This wiki has the inline plugin **disabled**."]]
+
+[[if test="enabled(inline)"
      then="You can"
      else="If this wiki had the inline plugin enabled, you could"]]
 turn any page on this wiki into a weblog by using the `inline`
