--- a/doc/openid.mdwn
+++ b/doc/openid.mdwn
@@ -1,5 +1,9 @@
 [[meta title="OpenID"]]
 
+[[if test="enabled(openid)"
+     then="This wiki has OpenID **enabled**."
+     else="This wiki has OpenID **disabled**."]]
+
 [OpenID](http://openid.net) is a decentralized authentication mechanism
 that allows you to have one login that you can use on a growing number of
 websites.
