add basewiki page

--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -39,9 +39,9 @@ This tutorial will walk you through setting up a wiki with ikiwiki.
    
    See [[HelpOnFormatting]] for details about the markup language.
 
-   Note that several standard wiki pages will be added to your wiki, from
-   files in `/usr/share/ikiwiki/basewiki/`, so your wiki will automatically
-   get a [[SandBox]], and some other useful pages.
+   Note that several [[standard_wiki_pages|basewiki]] will be added to your
+   wiki, from files in `/usr/share/ikiwiki/basewiki/`, so your wiki will
+   automatically get a [[SandBox]], and some other useful pages.
 
 4. Build your wiki for the first time.
 
