--- a/doc/translation.mdwn
+++ b/doc/translation.mdwn
@@ -27,6 +27,6 @@ essentailly three peices needed for a complete translation:
    [[patchqueue/l10n]], but until that's complete, you'd need to copy and
    translate the templates by hand.
 
-1. The basewiki itself needs to be translated. Whether to only translate
+1. The [[basewiki]] itself needs to be translated. Whether to only translate
    the page contents, or also translate the page names, is an open
    question.
