--- a/doc/basewiki.mdwn
+++ b/doc/basewiki.mdwn
@@ -17,5 +17,5 @@ It currently includes these pages:
 * [[subpage]]
 * [[wikilink]]
 
-As well as a few other files, like [[favicon.ico]], [[local.css],
+As well as a few other files, like [[favicon.ico]], [[local.css]],
 [[style.css]], and some icons.
