web commit by MarkusSchaber

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -9,7 +9,8 @@ Note that for more formal bug reports or todo items, you can also edit the
 
 # Installation/Setup questions
 
-Add them here..
+Ikiwiki creates a .ikiwiki directory in my wikiwc working directory. Should I
+"svn add .ikiwiki" or add it to svn:ignore?
 
 ----
 # Excellent - how do I translate a TWiki site?
