--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ikiwiki (1.45) UNRELEASED; urgency=low
+
+  * Allow for underscores to appear in page titles, if encoded appropriately
+    (__95__) in filenames. Previously, all underscores were replaced with
+    spaces. Thanks, Enrico Zini for noticing that bug.
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  1 Mar 2007 19:30:36 -0500
+
 ikiwiki (1.44) unstable; urgency=low
 
   * Patch by Ben to fix validaton of atom feeds by fixing the category tags.
