--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -12,6 +12,9 @@ Note that for more formal bug reports or todo items, you can also edit the
 Ikiwiki creates a .ikiwiki directory in my wikiwc working directory. Should I
 "svn add .ikiwiki" or add it to svn:ignore?
 
+> `.ikiwiki` is used by ikiwiki to store internal state. You can add it to
+> svn:ignore. --[[Joey]]
+
 ----
 # Excellent - how do I translate a TWiki site?
 
