--- a/doc/todo/Add_showdown_GUI_input__47__edit.mdwn
+++ b/doc/todo/Add_showdown_GUI_input__47__edit.mdwn
@@ -4,3 +4,9 @@ It is BSD-licensed javascript that shows the rendered Markdown (or HTML) while e
 A demo is at <http://www.attacklab.net/showdown-gui.html>
 
 (I read about this on the markdown mailing list.)
+
+> [[Wikiwyg]] also can provide a nice GUI for editing, although it would
+> need to be expanded to support markdown. The benefit compared to showdown
+> is that it provides a GUI for editing with widets for italics, etc,
+> compared to showdown which still leaves input in markdown and seems more
+> geared to a fast preview of the html. --[[Joey]]
