change to links

--- a/basewiki/index.mdwn
+++ b/basewiki/index.mdwn
@@ -1,7 +1,1 @@
-Welcome to your new wiki.
-
-All wikis are supposed to have a [[SandBox]], so this one does too.
-
-----
-
-This wiki is powered by [ikiwiki](http://ikiwiki.info).
+../doc/basewiki/index.mdwn
