put the basewiki index and sandbox pages in a subdir of the doc wiki

--- a/doc/basewiki.mdwn
+++ b/doc/basewiki.mdwn
@@ -4,8 +4,8 @@ versions.
 
 It currently includes these pages:
 
-* index (not the one in this wiki)
-* sandbox (not the on in this wiki)
+* [[index]]
+* [[sandbox]]
 * [[blog]]
 * [[HelpOnFormatting]]
 * [[markdown]]
