* Add "template" option to inline plugin to allow for use of customised   templates.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,10 @@ ikiwiki (1.45) UNRELEASED; urgency=low
   * Allow for underscores to appear in page titles, if encoded appropriately
     (__95__) in filenames. Previously, all underscores were replaced with
     spaces. Thanks, Enrico Zini for noticing that bug.
+  * Add "template" option to inline plugin to allow for use of customised
+    templates.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  1 Mar 2007 19:30:36 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu,  1 Mar 2007 22:55:35 -0500
 
 ikiwiki (1.44) unstable; urgency=low
 
