--- a/doc/todo/Option_to_disable_date_footer_for_inlines.mdwn
+++ b/doc/todo/Option_to_disable_date_footer_for_inlines.mdwn
@@ -14,3 +14,6 @@ instance. --[[JoshTriplett]]
 >> In a related note, I'd like an option to include the creation date on some non-inlined pages too. I suppose
 >> that's doable with some template hook in a plugin, and a command-line parameter pagespec (suffices for me),
 >> but I haven't got around to that yet. --[[tuomov]]
+
+Customised templates can now be specified with the `templates` parameter,
+so [[todo/done]] --[[Joey]]
