web commit by http://ptecza.myopenid.com/: * Fixed bug

--- a/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
+++ b/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
@@ -204,3 +204,6 @@ In my case, my setup file is in a different home and owned by a different user t
 >> 
 >> It sounds like your post-commit hook is still not set up, or is failing
 >> for some reason (permissions perhaps?) --[[Joey]]
+
+>>> OK, [[bugs/done]]! It was problem with permissions and not upgraded
+>>> `editpage.tmpl` template :) --Pawel
