web commit by MarkusSchaber

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -14,7 +14,10 @@ Ikiwiki creates a .ikiwiki directory in my wikiwc working directory. Should I
 
 > `.ikiwiki` is used by ikiwiki to store internal state. You can add it to
 > svn:ignore. --[[Joey]]
+> > Thanks a lot.
 
+Is there an easy way to log via e-mail to some webmaster address, instead
+of via syslog?
 ----
 # Excellent - how do I translate a TWiki site?
 
