web commit by http://wikevent.org/en/User:Mark: add my site

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -43,7 +43,8 @@ Personal sites and blogs
 * [lost scraps](http://web.mornfall.net), pages/blog of Petr Ročkai aka mornfall
 * [Ronan Le Hy's blog](http://bayesien.org), in French.
 * <http://iainmclaren.com>.
-* [formorers blog and website](http://www.formorer.de/webwiki/) 
+* [formorers blog and website](http://www.formorer.de/webwiki/)
+* [Mark Jaroski's blog](http://movemearound.org/blog.html)
 
 Please feel free to add your own ikiwiki site!
 
