web commit by HenrikBrixAndersen: Say thanks :)

--- a/doc/bugs/Wrong_permissions_on_4_smileys.mdwn
+++ b/doc/bugs/Wrong_permissions_on_4_smileys.mdwn
@@ -6,3 +6,5 @@ The following four PNG files have permissions 600 instead of 644 in the source t
 * basewiki/smileys/prio3.png
 
 [[bugs/done]] in my sources --[[Joey]]
+
+Thank you --[[Brix]]
