web commit by http://wikevent.org/en/User:Mark: fixed link to my weblog

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -44,7 +44,7 @@ Personal sites and blogs
 * [Ronan Le Hy's blog](http://bayesien.org), in French.
 * <http://iainmclaren.com>.
 * [formorers blog and website](http://www.formorer.de/webwiki/)
-* [Mark Jaroski's blog](http://movemearound.org/blog.html)
+* [Mark Jaroski's blog](http://movemearound.org/)
 
 Please feel free to add your own ikiwiki site!
 
