* Add titlepage template for inline plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ ikiwiki (1.45) UNRELEASED; urgency=low
     spaces. Thanks, Enrico Zini for noticing that bug.
   * Add "template" option to inline plugin to allow for use of customised
     templates.
+  * Add titlepage template for inline plugin.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  1 Mar 2007 22:55:35 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue,  6 Mar 2007 14:16:21 -0500
 
 ikiwiki (1.44) unstable; urgency=low
 
