--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -19,6 +19,9 @@ Ikiwiki creates a .ikiwiki directory in my wikiwc working directory. Should I
 Is there an easy way to log via e-mail to some webmaster address, instead
 of via syslog?
 
+> Not sure why you'd want to do that, but couldn't you use a tool like
+> logwatch to mail selected lines from the syslog? --[[Joey]]
+
 ----
 # Excellent - how do I translate a TWiki site?
 
