--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -20,7 +20,10 @@ Thanks! --[[Joey]]
   the parameters and usage of the ikiwiki program. There are some
   [[examples]] of things you can do with ikiwiki.
 
-* Feel free to post your questions and thoughts about ikiwiki to [[Discussion]].
+* Feel free to post your questions and thoughts about ikiwiki to
+  [[Discussion]].  You could also drop by the IRC channel `#ikiwiki` on OFTC
+  (`irc.oftc.net`).  [[ikiwiki_does_not_have_a_mailing_list|mailing_list]]; we
+  use the wiki instead.
 
 * [[Security]] lists potential security problems. ikiwiki is still being
   developed, and is being written with security as a priority, so don't
