web commit by JoshTriplett: Fill in mentors, administrators, item 13 "What criteria did you use to select these individuals as mentors?", and item 15 "What is your plan for dealing with disappearing mentors?".

--- a/doc/soc/application.mdwn
+++ b/doc/soc/application.mdwn
@@ -28,7 +28,7 @@ Based on ["What should a mentoring organization application look like?"](http://
 
 5. **Who will your organization administrator be? Please include Google Account information.**
 
-    Josh Triplett <josh@freedesktop.org>
+    Josh Triplett <<josh@freedesktop.org>>
 
 6. **What license does your project use?**
 
@@ -55,16 +55,21 @@ Based on ["What should a mentoring organization application look like?"](http://
 
 11. **Who will be your backup organization administrator? Please include Google Account information.**
 
-
+    Joey Hess <<joey@kitenet.net>>
 
 12. **Who will your mentors be? Please include Google Account Information.**
 
-    Joey Hess <joey@kitenet.net>
-    Josh Triplett <josh@freedesktop.org>
+    Joey Hess <<joey@kitenet.net>>
+
+    Josh Triplett <<josh@freedesktop.org>>
+
+    Jamey Sharp <<jamey.sharp@gmail.com>>
 
 13. **What criteria did you use to select these individuals as mentors? Please be as specific as possible.**
 
+    Joey Hess developed ikiwiki, and serves as its primary developer and maintainer.
 
+    Josh Triplett and Jamey Sharp maintain numerous ikiwikis, and have experience hacking on ikiwiki.  They developed and currently maintain a set of scripts to convert other wikis to ikiwiki.
 
 14. **What is your plan for dealing with disappearing students?**
 
@@ -72,7 +77,7 @@ Based on ["What should a mentoring organization application look like?"](http://
 
 15. **What is your plan for dealing with disappearing mentors?**
 
-
+    All three mentors understand the responsibility they will undertake, and they will not abdicate that responsibility lightly.  In the unlikely event that one of the mentors cannot follow through with a project due to exigent circumstances, the other mentors will take up the slack and help the students working on projects with that mentor.  Furthermore, we intend for all mentors to help with all projects to some degree, by collaborating with the students through ikiwiki.
 
 16. **What steps will you take to encourage students to interact with your project's community before, during and after the program?**
 
