web commit by JoshTriplett: Application submitted 03-06-2007.

--- a/doc/soc/application.mdwn
+++ b/doc/soc/application.mdwn
@@ -1,3 +1,5 @@
+Application submitted 03-06-2007.
+
 Based on ["What should a mentoring organization application look like?"](http://code.google.com/support/bin/answer.py?answer=60303).
 
 1. **Describe your organization.**
