* Add a sparline plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,8 +12,9 @@ ikiwiki (1.45) UNRELEASED; urgency=low
     does all the work to make sure the resizing works, and dummys up a resized
     image using width and height attributes.
   * Also fixes img preview display, the links were wrong in preview before.
+  * Add a sparline plugin.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  6 Mar 2007 16:41:53 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed,  7 Mar 2007 00:16:01 -0500
 
 ikiwiki (1.44) unstable; urgency=low
 
