typo sparline => sparkline

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,7 +12,7 @@ ikiwiki (1.45) UNRELEASED; urgency=low
     does all the work to make sure the resizing works, and dummys up a resized
     image using width and height attributes.
   * Also fixes img preview display, the links were wrong in preview before.
-  * Add a sparline plugin.
+  * Add a sparkline plugin.
 
  -- Joey Hess <joeyh@debian.org>  Wed,  7 Mar 2007 00:16:01 -0500
 
