--- a/doc/plugins/sparkline.mdwn
+++ b/doc/plugins/sparkline.mdwn
@@ -26,27 +26,25 @@ packages.
 	\[[sparkline 1 3 5 -3 10 0 width=40 height=16
 	featurepoint="4,-3,red,3" featurepoint="5,10,green,3"]]
 
+This creates a simple line graph, graphing several points.
 [[if test="enabled(sparkline)" then="""
 [[sparkline 1 3 5 -3 10 0 width=40 height=16
 featurepoint="4,-3,red,3" featurepoint="5,10,green,3"]]
 """]]
-
-This creates a simple line graph, graphing several points. It will be drawn
-40 pixels wide and 16 pixels high. The high point in the line has a green
-marker, and the low point has a red marker.
+It will be drawn 40 pixels wide and 16 pixels high. The high point in the
+line has a green marker, and the low point has a red marker.
 
 	\[[sparkline 1 -1(red) 1 -1(red) 1 1 1 -1(red) -1(red) style=bar barwidth=2
 	barspacing=1 height=13]]
 
+This more complex example generates a bar graph. 
 [[if test="enabled(sparkline)" then="""
 [[sparkline 1 -1(red) 1 -1(red) 1 1 1 -1(red) -1(red)
 style=bar barwidth=2 barspacing=1 height=13]]
 """]]
-
-This more complex example generates a bar graph. The bars are 2 pixels
-wide, and separated by one pixel, and the graph is 13 pixels tall. Width is
-determined automatically for bar graphs. The points with negative values
-are colored red, instead of the default black.
+The bars are 2 pixels wide, and separated by one pixel, and the graph is 13
+pixels tall. Width is determined automatically for bar graphs. The points
+with negative values are colored red, instead of the default black.
 
 # usage
 
