--- a/doc/plugins/sparkline.mdwn
+++ b/doc/plugins/sparkline.mdwn
@@ -48,9 +48,8 @@ with negative values are colored red, instead of the default black.
 
 # usage
 
-The form for the data points is "x,y" for line graphs, or just "y" if the x
-values don't matter. Bar graphs can also add "(color)" to specify a color
-for that bar.
+The form for the data points is "x,y", or just "y" if the x values don't
+matter. Bar graphs can also add "(color)" to specify a color for that bar.
 
 The following named parameters are recognised. Most of these are the same
 as those used by the underlying sparkline library, which is documented in
