support previewing of sparklines: embed in data uris for preview

--- a/doc/plugins/sparkline.mdwn
+++ b/doc/plugins/sparkline.mdwn
@@ -17,9 +17,8 @@ to use the plugin, you will need:
 * A "php" program in the path, that can run standalone php programs.
 * [[cpan Digest::SHA1]]
 
-On a Debian system, this can be accomplished by installing the
-`libsparkline-php`, `php5-gd`, `php5-cli`, and `libdigest-sha1-perl`
-packages.
+On a Debian system, this can be accomplished by installing these packages:
+`libsparkline-php` `php5-gd` `php5-cli` `libdigest-sha1-perl`
 
 # examples
 
