web commit by JonasSmedegaard: Correction: is should -> should.

--- a/doc/plugins/poll.mdwn
+++ b/doc/plugins/poll.mdwn
@@ -11,7 +11,7 @@ votes for a choice in the poll, the page is modified and the number
 incremented.
 
 While some basic precautions are taken to prevent users from accidentially
-voting twice, this sort of poll is should not be counted on the be very
+voting twice, this sort of poll should not be counted on the be very
 accurate; all the usual concerns about web based polling apply. Unless the
 page that the poll is in is locked, users can even edit the page and change
 the numbers!
