add check marks

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -4,9 +4,10 @@ This is the roadmap for ikiwiki drevelopment.
 
 Generally usable release.
 
-* No severe [[security]] bugs.
+* No severe [[security]] bugs. (./)
 * All the [[features]] people would expect in a wiki. Needs to be a plausable
   promise of being a wiki that people can commit to [[using|ikiwikiusers]].
+  (./)
 
 Released 29 April 2006.
 
@@ -14,18 +15,19 @@ Released 29 April 2006.
 
 * Unit test suite (with tests of at least core stuff like
   [[PageSpec]]). _(status: exists, could of course use more tests)_
-* [[Plugins]] _(status: done)_
-* [[Tags]] _(status: good)_
-* Should have fully working [[todo/utf8]] support. _(status: good)_
+* [[Plugins]] (./)
+* [[Tags]] (./)
+* Should have fully working [[todo/utf8]] support. (./)
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other
   scalability issues. _(status: scales to thousands of pages, and approximatly
-  3x as fast as version 1.0)_
+  3x as fast as version 1.0)_ (./)
 * Improved [[todo/html]] stylesheets and templates.
-* Improved scalable [[logo]]. _(status: done)_
+* Improved scalable [[logo]]. (./)
 * Support for at other revision control systems aside from svn.
-  See [[about_rcs_backends]] _(status: supports git, tla, mercurial)_
+  See [[about_rcs_backends]] _(status: supports git, tla, mercurial)_ (./)
 * Support for other markup languages than markdown
   _(status: done with rst, textile, etc. Markdown still works best though.)_
+  (./)
 * No serious known [[bugs]]
 * No severe-to-moderate known [[security]] issues.
 
