* Add a table plugin, derived from the one written by Victor Moral.

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,8 +17,9 @@ ikiwiki (1.45) UNRELEASED; urgency=low
     since it ended up being double-escaped. Instead, just remove slashes.
   * Fix some nasty issues with page name escaping during previewing
     (introduced in 1.44).
+  * Add a table plugin, derived from the one written by Victor Moral.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  7 Mar 2007 04:47:40 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed,  7 Mar 2007 06:26:51 -0500
 
 ikiwiki (1.44) unstable; urgency=low
 
